Update ClientResource.java